style: solved issue with the carousel cards appearing behind fixed navbars

--- a/src/components/layout/v2/v2.css
+++ b/src/components/layout/v2/v2.css
@@ -84,3 +84,8 @@ agora-result-window {
 
     z-index: 1000;
 }
+
+agora-card-info-carousel {
+    position: fixed;
+    z-index: 1000;
+}
